--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "build": "echo 'No build step required for this app.'",
-      "start": "node index.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "echo 'No build step required for this app.'",
+        "start": "node index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "bootstrap": "^5.3.3",
-      "bootstrap-icons": "^1.11.3",
-      "express": "^4.21.1",
-      "express-handlebars": "^8.0.1",
-      "express-handlebars-paginate": "^1.0.3"
+        "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "express-handlebars": "^8.0.1",
+        "express-handlebars-paginate": "^1.0.3",
+        "mongoose": "^8.8.3"
     }
-  }
-  
+}
