--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dependencies": {
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
+        "cookie-parser": "^1.4.7",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "express-handlebars": "^8.0.1",
         "express-handlebars-paginate": "^1.0.3",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.8.3"
     }
 }
