--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
         "express-handlebars": "^8.0.1",
         "express-handlebars-paginate": "^1.0.3",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.8.3"
+        "mongoose": "^8.8.3",
+        "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
+        "mongodb": "^6.10.0",
+        "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1"
     }
 }
