--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.701.0",
         "@aws-sdk/credential-providers": "^3.699.0",
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.3",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "express-handlebars": "^8.0.1",
         "express-handlebars-paginate": "^1.0.3",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.8.3",
-        "body-parser": "^1.20.3",
-        "cors": "^2.8.5",
         "mongodb": "^6.10.0",
+        "mongoose": "^8.8.3",
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1"
     }
